--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,18 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   change_app_package_name: ^1.5.0
+  flutter_bloc: ^9.1.1
+  equatable: ^2.0.8
+  dio: ^5.9.0
+  get_it: ^9.2.0
+  go_router: ^17.0.1
+  sqflite: ^2.4.2
+  path: ^1.9.1
+  cached_network_image: ^3.4.1
+  flutter_screenutil: ^5.9.3
+  bloc_test: ^10.0.0
+  mocktail: ^1.0.4
+  flutter_lints: ^6.0.0
 
 dev_dependencies:
   flutter_test:
@@ -45,7 +57,6 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
