chore: add dependencies - dartz

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   mocktail: ^1.0.4
   flutter_lints: ^6.0.0
   pretty_dio_logger: ^1.4.0
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_test:
