chore: add dependencies - spinkit

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_lints: ^6.0.0
   pretty_dio_logger: ^1.4.0
   dartz: ^0.10.1
+  flutter_spinkit: ^5.2.2
 
 dev_dependencies:
   flutter_test:
