--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,10 +50,18 @@ dependencies:
   pretty_dio_logger: ^1.4.0
   dartz: ^0.10.1
   flutter_spinkit: ^5.2.2
+  flutter_launcher_icons: ^0.14.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: true
+  ios: false
+  image_path: assets/app_logo.png
+  adaptive_icon_background: "#FFFFFF"
+  adaptive_icon_foreground: assets/logo/app_logo_foreground.png
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -71,6 +79,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/app_logo.png
+    - assets/app_logo_foreground.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
